--- a/definitions/aircraft/JPLogistics_C152X.yaml
+++ b/definitions/aircraft/JPLogistics_C152X.yaml
@@ -15,8 +15,150 @@ include:
   - definitions/modules/safety.yaml
   - definitions/modules/transponder.yaml
   - definitions/modules/trim.yaml
+    
+master:
+  -
+    type: var
+    var_name: A:PLANE HEADING DEGREES GYRO # Drifts for some reason
+    var_units: Degrees
+    var_type: f64
+    interpolate: DefaultConstant
 
-  shared:
+server:
+  - # Payload
+    type: var
+    var_name: FUEL TANK LEFT MAIN LEVEL
+    var_units: Percent
+    var_type: f64
+    unreliable: true
+  -
+    type: var
+    var_name: FUEL TANK RIGHT MAIN LEVEL
+    var_units: Percent
+    var_type: f64
+    unreliable: true
+
+shared:
+  - # Electrical
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:23
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 23
+  - 
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:25
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 25
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:28
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 28
+  - 
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:29
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 29
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:30
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 30
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:31
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 31
+  - 
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:32
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 32
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:33
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 33
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:34
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 34
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:35
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 35
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:36
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 36
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:37
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 37
+  - 
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:37
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 37
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:38
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 38
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:39
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 39
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:38
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 40
+  -
+    type: ToggleSwitch
+    var_name: A:CIRCUIT SWITCH ON:39
+    var_units: Bool
+    event_name: ELECTRICAL_CIRCUIT_TOGGLE
+    event_param: 41
+
+  
+  - # Animations
+    type: var
+    var_name: L:JPL_Door_Pilot
+  -
+    type: var
+    var_name: L:JPL_Window_Pilot
+  -
+    type: var
+    var_name: L:JPL_Door_CoPilot
+  -
+    type: var
+    var_name: L:JPL_Window_CoPilot
+  -
+    type: var
+    var_name: L:JPL_DME_Switch
+
   - # Engine
     type: NumSet
     var_name: A:RECIP ENG PRIMER:1
@@ -68,6 +210,14 @@ include:
     event_name: GLARESHIELD_LIGHTS_SET
   -
     type: NumSet
+    var_name: A:LIGHT POTENTIOMETER:0
+    var_units: percent
+    var_type: f64
+    event_name: LIGHT_POTENTIOMETER_SET
+    event_param: 0
+    index_reversed: true
+  -
+    type: NumSet
     var_name: A:LIGHT POTENTIOMETER:4
     var_units: percent
     var_type: f64
@@ -82,113 +232,20 @@ include:
     event_name: LIGHT_POTENTIOMETER_SET
     event_param: 5
     index_reversed: true
-    
-master:
   -
-    type: var
-    var_name: A:PLANE HEADING DEGREES GYRO # Drifts for some reason
-    var_units: Degrees
+    type: NumSet
+    var_name: A:LIGHT POTENTIOMETER:6
+    var_units: percent
     var_type: f64
-    interpolate: DefaultConstant
-
-server:
-  - # Payload
-    type: var
-    var_name: FUEL TANK LEFT MAIN LEVEL
-    var_units: Percent
+    event_name: LIGHT_POTENTIOMETER_SET
+    event_param: 6
+    index_reversed: true
+  -
+    type: NumSet
+    var_name: A:LIGHT POTENTIOMETER:9
+    var_units: percent
     var_type: f64
-    unreliable: true
-  -
-    type: var
-    var_name: FUEL TANK RIGHT MAIN LEVEL
-    var_units: Percent
-    var_type: f64
-    unreliable: true
-
-shared:
-  - # Electrical
-    type: ToggleSwitch
-    var_name: A:CIRCUIT SWITCH ON:18
-    var_units: Bool
-    event_name: ELECTRICAL_CIRCUIT_TOGGLE
-    event_param: 18
-  -
-    type: ToggleSwitch
-    var_name: A:CIRCUIT SWITCH ON:20
-    var_units: Bool
-    event_name: ELECTRICAL_CIRCUIT_TOGGLE
-    event_param: 20
-
-  - # LVAR Dump (JPL only)
-    type: var
-    var_name: L:XMLVAR_ADF_MODE_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_ADF_VOLUME
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_COM_1_VOLUME
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_COM_2_VOLUME
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_COM_1_TEST
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_COM_2_TEST
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_NAV_1_VOLUME
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_NAV_2_VOLUME
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_NAV_1_IDENT
-  -
-    type: var
-    var_name: L:XMLVAR_NAVCOM_NAV_2_IDENT
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_COM_1_MIC_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_COM_2_MIC_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_BOTH_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_NAV_1_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_NAV_2_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_ADF_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_DME_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_MKR_SEL
-  -
-    type: var
-    var_name: L:XMLVAR_AUDIO_SPKR_SEL
-  -
-    type: var
-    var_name: L:JPL_Door_Pilot
-  -
-    type: var
-    var_name: L:JPL_Window_Pilot
-  -
-    type: var
-    var_name: L:JPL_Door_CoPilot
-  -
-    type: var
-    var_name: L:JPL_Window_CoPilot
-  -
-    type: var
-    var_name: L:JPL_DME_Switch
+    event_name: LIGHT_POTENTIOMETER_SET
+    event_param: 9
+    index_reversed: true
   
